# py-rust-sandbox

./: Cargo.toml  README.md  pyproject.toml
py_src/: main.py
src/: lib.rs
