[tool.poetry]
name = "py-rust-sandbox"
version = "0.1.0"
description = ""
authors = ["Steven Kessler <stvnksslr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
maturin = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
